# mcmmtk

./: .gitignore  .gitmodules  Cargo.toml  MANIFEST.in  README  copyright  mcmmtk.desktop  mcmmtk.py  mcmmtk.xpm  mcmmtk_editor.desktop  mcmmtk_editor.py  mcmmtk_mixer.desktop  mcmmtk_mixer.py  mcmmtk_stds_editor.desktop  mcmmtk_stds_editor.py  mcmmtk_win_post_install.py  rpm_post_install.script  setup.cfg  setup.py  win_post_install.py
data/: ideal.psd  ideal_paints.json
data/paints/: Humbrol_Enamel-Paints.json  Vallejo-ModelAirColor-rev18-Baja.json  Vallejo-ModelColor-Metallic-rev18-Baja.json  Vallejo-ModelColor-rev18-Baja.json
data/standards/: FederalStandard595C-1XXXX-colorserver.json  bs381c.json
mcmmtk/: __init__.py  actions.py  config.py  data.py  editor.py  gpaint.py  gtkpwx.py  i18n.py  icons.py  iview.py  main_window.py  mixer.py  options.py  paint.py  printer.py  recollect.py  rgbh.py  stds_editor.py  sys_config.py  tlview.py  utils.py
mcmmtk_pkg/: __init__.py  main_window.py  mpaint.py
pixmaps/: mcmmtk.xcf
src/: config.rs  icon.rs  lib.rs  main.rs  mcmmtk.rs  mcmmtk_icon.rs  pathux.rs
src/model_paint/: mod.rs  series.rs
standards/: FederalStandard595C.pstddb  bs381c.pstddb
