[package]
name = "mcmmtk_rs"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]

[dependencies]
lazy_static = "0.2.8"
# TODO: change pw_gix dependency when it goes public
#pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_gix = { path = "../../CRATES/rs_pw_gix.git" }
# TODO: change pw_pathux dependency when it goes public
#pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
pw_pathux = { path = "../../CRATES/rs_pw_pathux.git" }
# TODO: change epaint dependency when it goes public
# epaint = { git = "https://github.com/pwil3058/rs_epaint.git" }
epaint = { path = "../../CRATES/rs_epaint.git" }

gdk = "0.10.0"
gdk-pixbuf = "0.6.0"
gio = "0.6.0"
gtk = "0.6.0"

[features]
default = ["gtk/v3_18"]
