[package]
name = "mcmmtk_rs"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "0.2.8"

pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
epaint = { git = "https://github.com/pwil3058/rs_epaint.git" }

gdk = "0.12.0"
gdk-pixbuf = "0.8.0"
gio = "0.8.0"
gtk = "0.8.0"

[features]
default = ["gtk/v3_18"]
